==> Vergil-114514/ANO_LX_FC_PRO/DriversMcu/STM32F4xx/Drivers/Drv_Uart.c <==
#include "Drv_Uart.h"
#include "AnoPTv8ExAPI.h"
#include "AnoPTv8.h"
#include "DataTransfer.h"
#include "Drv_UbloxGPS.h"
#include "Drv_AnoOf.h"
#include "DrvAnoOF_ptv7.h"
#include "Drv_RcIn.h"

void DrvUart1Init(uint32_t br_num)
{
    RCC_APB2PeriphClockCmd(UART1_RCC, ENABLE); //开启UART时钟
    RCC_AHB1PeriphClockCmd(UART1_PORT_RCC, ENABLE);

    //串口中断优先级
    NVIC_InitTypeDef NVIC_InitStructure;
    NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = NVIC_UART1_P;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = NVIC_UART1_S;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    //配置IO
    GPIO_PinAFConfig(UART1_PORT, GPIO_PinSource9, GPIO_AF_USART1);
    GPIO_PinAFConfig(UART1_PORT, GPIO_PinSource10, GPIO_AF_USART1);
    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = UART1_PIN_TX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(UART1_PORT, &GPIO_InitStructure);
    //
    GPIO_InitStructure.GPIO_Pin = UART1_PIN_RX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
    GPIO_Init(UART1_PORT, &GPIO_InitStructure);

    //配置串口
    USART_InitTypeDef USART_InitStructure;
    USART_StructInit(&USART_InitStructure);
    USART_DeInit(USART1);
    USART_InitStructure.USART_BaudRate = br_num;                                    //波特率可以通过地面站配置
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;                     //8位数据
    USART_InitStructure.USART_StopBits = USART_StopBits_1;                          //在帧结尾传输1个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;                             //禁用奇偶校验
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None; //硬件流控制失能
    USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;                 //发送、接收使能

    //配置UART时钟
    USART_ClockInitTypeDef USART_ClockInitStruct;
    USART_ClockInitStruct.USART_Clock = USART_Clock_Disable;     //时钟低电平活动
    USART_ClockInitStruct.USART_CPOL = USART_CPOL_Low;           //SLCK引脚上时钟输出的极性->低电平
    USART_ClockInitStruct.USART_CPHA = USART_CPHA_2Edge;         //时钟第二个边沿进行数据捕获
    USART_ClockInitStruct.USART_LastBit = USART_LastBit_Disable; //最后一位数据的时钟脉冲不从SCLK输出

    USART_Init(USART1, &USART_InitStructure);
    USART_ClockInit(USART1, &USART_ClockInitStruct);

    //使能UART接收中断
    USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);
    //使能UART
    USART_Cmd(USART1, ENABLE);
}

void DrvUart1SendBuf(const uint8_t *DataToSend, const uint8_t data_num)
{
    uint8_t i;
    for (i = 0; i < data_num; i++)
    {
        U1TxBuf[U1TxInCnt++] = *(DataToSend + i);
        if(U1TxInCnt >= U1TXBUFSIZE)
            U1TxInCnt = 0;
    }

    if (!(USART1->CR1 & USART_CR1_TXEIE))
    {
        USART_ITConfig(USART1, USART_IT_TXE, ENABLE); //打开发送中断
    }
}

void DrvUart2Init(uint32_t br_num)
{
    RCC_APB1PeriphClockCmd(UART2_RCC, ENABLE); //开启USART时钟
    RCC_AHB1PeriphClockCmd(UART2_PORT_RCC, ENABLE);

    //串口中断优先级
    NVIC_InitTypeDef NVIC_InitStructure;
    NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = NVIC_UART2_P;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = NVIC_UART2_S;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    //配置IO
    GPIO_PinAFConfig(UART2_PORT, GPIO_PinSource5, GPIO_AF_USART2);
    GPIO_PinAFConfig(UART2_PORT, GPIO_PinSource6, GPIO_AF_USART2);
    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = UART2_PIN_TX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(UART2_PORT, &GPIO_InitStructure);
    //
    GPIO_InitStructure.GPIO_Pin = UART2_PIN_RX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_DOWN;
    GPIO_Init(UART2_PORT, &GPIO_InitStructure);

    //配置串口
    USART_InitTypeDef USART_InitStructure;
    USART_StructInit(&USART_InitStructure);
    USART_DeInit(USART2);
    USART_InitStructure.USART_BaudRate = br_num;                                    //波特率可以通过地面站配置
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;                     //8位数据
    USART_InitStructure.USART_StopBits = USART_StopBits_1;                          //在帧结尾传输1个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;                             //禁用奇偶校验
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None; //硬件流控制失能
    USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;                 //发送、接收使能

    //配置时钟
    USART_ClockInitTypeDef USART_ClockInitStruct;
    USART_ClockInitStruct.USART_Clock = USART_Clock_Disable;     //时钟低电平活动
    USART_ClockInitStruct.USART_CPOL = USART_CPOL_Low;           //SLCK引脚上时钟输出的极性->低电平
    USART_ClockInitStruct.USART_CPHA = USART_CPHA_2Edge;         //时钟第二个边沿进行数据捕获
    USART_ClockInitStruct.USART_LastBit = USART_LastBit_Disable; //最后一位数据的时钟脉冲不从SCLK输出

    USART_Init(USART2, &USART_InitStructure);
    USART_ClockInit(USART2, &USART_ClockInitStruct);

    //使能USART接收中断
    USART_ITConfig(USART2, USART_IT_RXNE, ENABLE);
    //使能USART
    USART_Cmd(USART2, ENABLE);
}

void DrvUart2SendBuf(const uint8_t *DataToSend, const uint8_t data_num)
{
    uint8_t i;
    for (i = 0; i < data_num; i++)
    {
        U2TxBuf[U2TxInCnt++] = *(DataToSend + i);
        if(U2TxInCnt >= U2TXBUFSIZE)
            U2TxInCnt = 0;
    }
    if (!(USART2->CR1 & USART_CR1_TXEIE))
    {
        USART_ITConfig(USART2, USART_IT_TXE, ENABLE); //打开发送中断
    }
}

void DrvUart3Init(uint32_t br_num)
{
    RCC_APB1PeriphClockCmd(UART3_RCC, ENABLE); //开启UART时钟
    RCC_AHB1PeriphClockCmd(UART3_PORT_RCC, ENABLE);

    //串口中断优先级
    NVIC_InitTypeDef NVIC_InitStructure;
    NVIC_InitStructure.NVIC_IRQChannel = USART3_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = NVIC_UART3_P;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = NVIC_UART3_S;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    //配置IO
    GPIO_PinAFConfig(UART3_PORT, GPIO_PinSource8, GPIO_AF_USART3);
    GPIO_PinAFConfig(UART3_PORT, GPIO_PinSource9, GPIO_AF_USART3);
    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = UART3_PIN_TX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(UART3_PORT, &GPIO_InitStructure);
    //
    GPIO_InitStructure.GPIO_Pin = UART3_PIN_RX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
    GPIO_Init(UART3_PORT, &GPIO_InitStructure);

    //配置串口
    USART_InitTypeDef USART_InitStructure;
    USART_StructInit(&USART_InitStructure);
    USART_DeInit(USART3);
    USART_InitStructure.USART_BaudRate = br_num;                                    //波特率可以通过地面站配置
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;                     //8位数据
    USART_InitStructure.USART_StopBits = USART_StopBits_1;                          //在帧结尾传输1个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;                             //禁用奇偶校验
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None; //硬件流控制失能
    USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;                 //发送、接收使能

    //配置时钟
    USART_ClockInitTypeDef USART_ClockInitStruct;
    USART_ClockInitStruct.USART_Clock = USART_Clock_Disable;     //时钟低电平活动
    USART_ClockInitStruct.USART_CPOL = USART_CPOL_Low;           //SLCK引脚上时钟输出的极性->低电平
    USART_ClockInitStruct.USART_CPHA = USART_CPHA_2Edge;         //时钟第二个边沿进行数据捕获
    USART_ClockInitStruct.USART_LastBit = USART_LastBit_Disable; //最后一位数据的时钟脉冲不从SCLK输出

    USART_Init(USART3, &USART_InitStructure);
    USART_ClockInit(USART3, &USART_ClockInitStruct);

    //使能UART接收中断
    USART_ITConfig(USART3, USART_IT_RXNE, ENABLE);
    //使能UART
    USART_Cmd(USART3, ENABLE);
}

void DrvUart3SendBuf(const uint8_t *DataToSend, const uint8_t data_num)
{
    uint8_t i;
    for (i = 0; i < data_num; i++)
    {
        U3TxBuf[U3TxInCnt++] = *(DataToSend + i);
        if(U3TxInCnt >= U3TXBUFSIZE)
            U3TxInCnt = 0;
    }

    if (!(USART3->CR1 & USART_CR1_TXEIE))
    {
        USART_ITConfig(USART3, USART_IT_TXE, ENABLE); //打开发送中断
    }
}

void DrvUart4Init(uint32_t br_num)
{
    RCC_APB1PeriphClockCmd(UART4_RCC, ENABLE); //开启UART时钟
    RCC_AHB1PeriphClockCmd(UART4_PORT_RCC, ENABLE);

    //串口中断优先级
    NVIC_InitTypeDef NVIC_InitStructure;
    NVIC_InitStructure.NVIC_IRQChannel = UART4_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = NVIC_UART4_P;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = NVIC_UART4_S;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    //配置IO
    GPIO_PinAFConfig(UART4_PORT, GPIO_PinSource0, GPIO_AF_UART4);
    GPIO_PinAFConfig(UART4_PORT, GPIO_PinSource1, GPIO_AF_UART4);
    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = UART4_PIN_TX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(UART4_PORT, &GPIO_InitStructure);
    //
    GPIO_InitStructure.GPIO_Pin = UART4_PIN_RX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
    GPIO_Init(UART4_PORT, &GPIO_InitStructure);

    //配置串口
    USART_InitTypeDef USART_InitStructure;
    USART_StructInit(&USART_InitStructure);
    USART_DeInit(UART4);
    USART_InitStructure.USART_BaudRate = br_num;                                    //波特率可以通过地面站配置
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;                     //8位数据
    USART_InitStructure.USART_StopBits = USART_StopBits_1;                          //在帧结尾传输1个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;                             //禁用奇偶校验
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None; //硬件流控制失能
    USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;                 //发送、接收使能
    USART_Init(UART4, &USART_InitStructure);

    //使能UART接收中断
    USART_ITConfig(UART4, USART_IT_RXNE, ENABLE);
    //使能UART
    USART_Cmd(UART4, ENABLE);
}

void DrvUart4SendBuf(const uint8_t *DataToSend, const uint8_t data_num)
{
    uint8_t i;
    for (i = 0; i < data_num; i++)
    {
        U4TxBuf[U4TxInCnt++] = *(DataToSend + i);
        if(U4TxInCnt >= U4TXBUFSIZE)
            U4TxInCnt = 0;
    }

    if (!(UART4->CR1 & USART_CR1_TXEIE))
    {
        USART_ITConfig(UART4, USART_IT_TXE, ENABLE); //打开发送中断
    }
}

void DrvUart5Init(uint32_t br_num)
{
    RCC_APB1PeriphClockCmd(UART5_RCC, ENABLE); //开启UART时钟
    RCC_AHB1PeriphClockCmd(UART5_PORT1_RCC, ENABLE);
    RCC_AHB1PeriphClockCmd(UART5_PORT2_RCC, ENABLE);

    //串口中断优先级
    NVIC_InitTypeDef NVIC_InitStructure;
    NVIC_InitStructure.NVIC_IRQChannel = UART5_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = NVIC_UART5_P;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = NVIC_UART5_S;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    //配置IO
    GPIO_PinAFConfig(UART5_PORT1, GPIO_PinSource12, GPIO_AF_UART5);
    GPIO_PinAFConfig(UART5_PORT2, GPIO_PinSource2, GPIO_AF_UART5);
    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = UART5_PIN_TX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_Init(UART5_PORT1, &GPIO_InitStructure);
    //
    GPIO_InitStructure.GPIO_Pin = UART5_PIN_RX;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
    GPIO_Init(UART5_PORT2, &GPIO_InitStructure);

    //配置串口
    USART_InitTypeDef USART_InitStructure;
    USART_StructInit(&USART_InitStructure);
    USART_DeInit(UART5);
    USART_InitStructure.USART_BaudRate = br_num;                                    //波特率可以通过地面站配置
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;                     //8位数据
    USART_InitStructure.USART_StopBits = USART_StopBits_1;                          //在帧结尾传输1个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;                             //禁用奇偶校验
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None; //硬件流控制失能
    USART_InitStructure.USART_Mode = USART_Mode_Tx | USART_Mode_Rx;                 //发送、接收使能
    USART_Init(UART5, &USART_InitStructure);

    //使能UART接收中断
    USART_ITConfig(UART5, USART_IT_RXNE, ENABLE);
    //使能UART
    USART_Cmd(UART5, ENABLE);
}

void DrvUart5SendBuf(const uint8_t *DataToSend, const uint8_t data_num)
{
    uint8_t i;
    for (i = 0; i < data_num; i++)
    {
        U5TxBuf[U5TxInCnt++] = *(DataToSend + i);
        if(U5TxInCnt >= U5TXBUFSIZE)
            U5TxInCnt = 0;
    }

    if (!(UART5->CR1 & USART_CR1_TXEIE))
    {
        USART_ITConfig(UART5, USART_IT_TXE, ENABLE); //打开发送中断
    }
}

void DrvUartDataCheck(void)
{
    drvU1DataCheck();
    drvU2DataCheck();
    drvU3DataCheck();
    drvU4DataCheck();
    drvU5DataCheck();
    drvU7DataCheck();
    drvU8DataCheck();
}
